Notifications text cutoff fix

--- a/components/ui/platform-core/src/main/resources/META-INF/dirigible/platform-core/ui/styles/shell.css
+++ b/components/ui/platform-core/src/main/resources/META-INF/dirigible/platform-core/ui/styles/shell.css
@@ -224,3 +224,9 @@ body {
     top: 0;
     z-index: 1;
 }
+
+.notification-popover .fd-notification__paragraph {
+    -webkit-line-clamp: none;
+    line-clamp: none;
+    max-height: none;
+}
